2000-09-09  Christopher James Lahey  <clahey@helixcode.com>

	* e-shell-view.c: Fixed some warnings.

2000-09-09  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view.c (update_for_current_uri): Make sure `folder_name'
	is always dynamically allocated, as we `g_free()' it.

2000-09-08  Lauris Kaplinski  <lauris@helixcode.com>

	* e-shell-view.c (update_for_current_uri): Translate UTF-8 string

2000-09-08  Ettore Perazzoli  <ettore@helixcode.com>

	* evolution-storage.c (list_through_listener_foreach): Don't crash
	on nodes with no data.  [The root node has none indeed.]

2000-09-08  Ettore Perazzoli  <ettore@helixcode.com>

	* e-folder-tree.c (e_folder_tree_get_folder): Return NULL if there
	is no folder with that @path, instead of segfaulting.

2000-09-08  Ettore Perazzoli  <ettore@helixcode.com>

	* evolution-storage.c: New member `folder_tree' in
	`EvolutionStoragePrivate'.
	(init): Initialize it.
	(destroy): Destroy it.
	(list_through_listener): New.
	(add_listener): Use it to list all the current folders through the
	listener.
	(evolution_storage_new_folder): Add the thingie to the
	`folder_tree'.
	(evolution_storage_removed_folder): Remove the thingie from the
	`folder_tree'.

2000-09-08  Ettore Perazzoli  <ettore@helixcode.com>

	* e-storage.c: Replaced the `path_to_folder' GHashTable with an
	EFolderTree named `folder_tree'.
	(init): Updated accordingly.
	(destroy): Updated accordingly.
	(free_private): Removed.
	(remove_folder): Removed.
	(folder_new): Removed.
	(folder_remove_subfolder): Removed.
	(folder_add_subfolder): Removed.
	(folder_destroy): Removed.
	(get_parent_path): Removed.
	(impl_list_folders): Reimplemented by using the `EFolderTree'
	methods.
	(e_storage_construct): Don't create the root folder here.
	(get_path_for_physical_uri_foreach): Updated to be an
	`EFolderTreeForeachFunc'.
	(e_storage_get_path_for_physical_uri): Likewise, updated to use
	`e_folder_tree_foreach()'.
	(e_storage_new_folder): Updated to use the EFolderTree.